[package]
name = "pressure_recorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_excel_writer = "0.2.0"
plotters = { version = "0.3.1", default_features = false, features = ["svg_backend", "all_series"] }
ads1x1x = "0.2.2"
nb = "1.0.0"
embedded-hal = "0.2.6"
linux-embedded-hal = "0.3.2"
i2cdev = "0.5.1"
